--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -78,24 +78,14 @@
         android:textAlignment="center"/>
 
     <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="@string/logout"
-        android:layout_below="@+id/btnJoin"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
-
-    <Button
         android:id="@+id/btnJoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="#f6e017"
         android:text="@string/create_new_account"
         android:textAlignment="center"
-        android:layout_below="@+id/tvNoAccount"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
@@ -105,8 +95,8 @@
         android:layout_height="30dp"
         android:text="@string/no_account"
         android:textAlignment="center"
-        android:layout_below="@+id/tvForgetPasswd"
+        android:layout_above="@+id/btnJoin"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="24dp"/>
+        android:layout_marginBottom="@dimen/comp_vertical_margin"/>
 </RelativeLayout>
