--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -72,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_below="@id/btnLogin"
-        android:textColor="@color/link"
+        android:textColor="@color/colorAccent"
         android:layout_centerHorizontal="true"
         android:text="@string/forget_password"
         android:textAlignment="center"/>
