--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -19,6 +19,6 @@
     <style name="TitleTextAppearance">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/turquoise</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 </resources>
