--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,38 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
+
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryLight">#B2DFDB</color>
-    <color name="colorTextIcons">#FFFFF</color>
+    <color name="colorTextIcons">#FFFFFF</color>
     <color name="colorAccent">#FF9800</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#727272</color>
     <color name="colorDivider">#B6B6B6</color>
-
-    <!--<color name="colorPrimary">#00BCD4</color>-->
-    <!--<color name="colorPrimaryDark">#0097A7</color>-->
-    <!--<color name="colorPrimaryLight">#B2EBF2</color>-->
-    <!--<color name="colorAccent">#FFEB3B</color>-->
-    <!--<color name="primary_text">#212121</color>-->
-    <!--<color name="secondary_text">#727272</color>-->
-    <!--<color name="icons">#FFFFFF</color>-->
-    <!--<color name="divider">#B6B6B6</color>-->
-
-    <!--<color name="colorPrimary">#679999</color>-->
-    <!--<color name="colorPrimaryDark">#818181</color>-->
-    <!--<color name="colorAccent">#f47b20</color>-->
-
-    <!--<color name="orange">#f47b20</color>-->
-    <!--<color name="dark_gray">#818181</color>-->
-    <!--<color name="turquoise">#679999</color>-->
-    <!--<color name="turquoise_light">#8FB3B3</color>-->
-    <!--<color name="teal">#1abc9c</color>-->
-    <!--<color name="white">#FFFFFF</color>-->
-    <!--<color name="black">#000000</color>-->
-
-    <!--<color name="link">#3D82C6</color>-->
-
-    <!--<color name="red_text_card">#E66B48</color>-->
 
 </resources>
