--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
     <style name="TitleTextAppearance">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/turquoise</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 
     <style name="conv_card_title">
@@ -31,7 +31,7 @@
         <item name="android:layout_alignParentTop">true</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/red_text_card</item>
+        <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textSize">28sp</item>
     </style>
 
@@ -48,7 +48,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_alignParentLeft">true</item>
         <item name="android:layout_below">@+id/linearLayoutHeader</item>
-        <item name="android:textColor">@color/red_text_card</item>
+        <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/conv_text_big</item>
     </style>
@@ -92,26 +92,26 @@
     <style name="MapInfoWindow.Title" parent="MapInfoWindow">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
     <style name="MapInfoWindow.Subtitle" parent="MapInfoWindow">
         <item name="android:textStyle">italic</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
     <style name="MapInfoWindow.Body" parent="MapInfoWindow">
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/dark_gray</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
     <style name="MapInfoWindow.Button" parent="MapInfoWindow">
         <item name="android:layout_margin">10dp</item>
         <item name="android:padding">10dp</item>
-        <item name="android:background">@color/turquoise</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textColor">@color/colorTextIcons</item>
     </style>
 
     <style name="home_menu_item_image">
