--- a/app/src/main/res/layout/item_chat_user.xml
+++ b/app/src/main/res/layout/item_chat_user.xml
@@ -3,7 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:descendantFocusability="blocksDescendants"
-                android:padding="10dp">
+                android:padding="@dimen/activity_horizontal_margin">
 
     <ImageView
         android:id="@+id/ivProfileImage"
@@ -17,6 +17,8 @@
 
     <TextView
         android:id="@+id/tvUserName"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryLight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -28,12 +30,13 @@
         android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvUserName"
         android:layout_toEndOf="@+id/ivProfileImage"
         android:layout_toRightOf="@+id/ivProfileImage"
+        android:layout_alignBottom="@id/ivProfileImage"
         android:text="New Text"/>
 
     <TextView
+        android:textStyle="bold"
         android:id="@+id/tvUserType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
